--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:name="com.mayburger.gojekuiclone.ui.base.BaseApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gojek">
-        <activity android:name="com.mayburger.gojekuiclone.MainActivity">
+        <activity android:name="com.mayburger.gojekuiclone.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
