--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,23 @@
     package="com.mayburger.gojekuiclone">
 
     <application
+        android:name=".ui.base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:name="com.mayburger.gojekuiclone.ui.base.BaseApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gojek">
-        <activity android:name="com.mayburger.gojekuiclone.ui.main.MainActivity">
+        <activity android:name=".FoodActivity">
+        </activity>
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
