--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gojek">
         <activity android:name=".ui.splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".util.burgerswipe.BurgerActivity"></activity>
         <activity android:name=".ui.grabpay.GrabPayActivity" />
@@ -37,7 +33,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ui.food.FoodActivity"></activity>
+        <activity android:name=".ui.food.FoodActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.main.MainActivity"
             android:theme="@style/Theme.Gojek.Main.Light">
