--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mayburger.gojekuiclone">
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.mayburger.gojekuiclone"
+        >
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the "MyLocation" functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:name=".ui.base.BaseApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Gojek">
-        <activity android:name=".ui.splash.SplashActivity">
+            android:name=".ui.base.BaseApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Gojek"
+            >
+        <activity android:name=".FlipActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
-        <activity android:name=".util.burgerswipe.BurgerActivity"></activity>
-        <activity android:name=".ui.grabpay.GrabPayActivity" />
+        <activity android:name=".ui.splash.SplashActivity">
+        </activity>
+        <activity android:name=".util.burgerswipe.BurgerActivity"/>
+        <activity android:name=".ui.grabpay.GrabPayActivity"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -30,19 +39,17 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key"
+                />
 
         <activity android:name=".ui.food.FoodActivity">
+
         </activity>
         <activity
-            android:name=".ui.main.MainActivity"
-            android:theme="@style/Theme.Gojek.Main.Light">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                android:name=".ui.main.MainActivity"
+                android:theme="@style/Theme.Gojek.Main.Light"
+                >
         </activity>
     </application>
 
